--- a/index.html
+++ b/index.html
@@ -47,17 +47,9 @@
     <section id="categoriesPreview" class="categoriesPreview-container">
       <h2 class="categoriesPreview-title">Categorías</h2>
       <article class="categoriesPreview-list">
-        <div class="category-container">
+        <!-- <div class="category-container">
           <h3 id="id28" class="category-title">Romance</h3>
-        </div>
-
-        <div class="category-container">
-          <h3 id="id16" class="category-title">Drama</h3>
-        </div>
-
-        <div class="category-container">
-          <h3 id="id14" class="category-title">Accion</h3>
-        </div>
+        </div> -->
       </article>
     </section>
 
