--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 
     <footer>Hecho con amor en Platzi por @juandc</footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./src/secret.js"></script>
     <script src="./src/main.js"></script>
   </body>
