--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
     </section>
 
-    <section id="movie-detail" class="movieDetail-container inactive">
+    <section id="movieDetail" class="movieDetail-container inactive">
       <h1 class="movieDetail-title">Deadpool</h1>
       <span class="movieDetail-score">7.6</span>
       <p class="movieDetail-description">
@@ -102,10 +102,10 @@
       </article>
 
       <article class="relatedMovies-container">
-        <h2 class="relatedMovies-title">Peliculas similares</h2>
+        <h2 class="relatedMovies-title">Películas similares</h2>
 
         <div class="relatedMovies-scrollContainer">
-          <div class="movieContainer">
+          <div class="movie-container">
             <img
               src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
               class="movie-img"
@@ -136,6 +136,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./src/secret.js"></script>
+    <script src="./src/nodes.js"></script>
     <script src="./src/main.js"></script>
+    <script src="./src/navigation.js"></script>
   </body>
 </html>
